# kbdysch

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  lkl-kbdysch.patch  update_invokers.sh
.github/workflows/: check-commit.yml  check-commit.yml.1  generate-invoker-sources.yml  generate-invoker-sources.yml.disabled  main.yml  test.yml
descriptions/: fs.txt
docs/: troubleshooting.md  using-lkl.md
generator/: build.sbt
generator/src/main/scala/io/github/atrosinenko/kbdysch/: Descriptions.scala  InvokerConstants.scala  InvokerGenerator.scala  InvokerUpdater.scala  SourceFormatter.scala  SyzkallerDescriptionParser.scala
generator/src/main/scala/io/github/atrosinenko/kbdysch/arguments/: ArgDescription.scala  ArrayArg.scala  Buffer.scala  Const.scala  DelFd.scala  Errno.scala  Fd.scala  FileName.scala  Flags.scala  GenContext.scala  IntegerArg.scala  Length.scala  Pointer.scala  Ref.scala  Sizeof.scala  StringRes.scala  StructLikeImpl.scala  UnknownArg.scala  package.scala
runtime/: CMakeLists.txt  api_defs.h  blockfuzz.cpp  bpffuzz.c  common-defs.h  compiler.h  fsfuzz.c  fusefuzz.c  hidfuzz.c  internal-defs.h  invoker-utils.h  kbdysch.h  kernel.c  partfuzz.c  resources.c  testfuzz.c  util.c
runtime/base/: CMakeLists.txt  diagnostics.c  hashing.c  options.c
runtime/common/: CMakeLists.txt  Helpers.cmake  LKL.cmake  Profile.cmake  block.c  common-defs.h  fake_time.c  hashing.c  hugepages.c  input.c  internal-defs.h  invoker-helpers.c  invoker-utils.h  kbdysch-hash.c  kbdysch.h  kernel.c  logging.c  mutator-interface.c  options.c  packet-dumper.c  resources.c  util.c
runtime/dummy-lkl/: CMakeLists.txt  dummy-lkl.c  lkl.h  lkl_host.h
runtime/extdeps/: CMakeLists.txt
runtime/extdeps/pcap/: CMakeLists.txt  packet-dumper.c
runtime/extdeps/pth/: CMakeLists.txt  extdep_pth.c
runtime/fake_time/: CMakeLists.txt
runtime/include/: block.h  common-defs.h  internal-defs.h  invoker-utils.h  kbdysch.h  logging.h  mutator-defs.h  mutator-interface.h
runtime/include/kbdysch/: api_defs.h  block.h  common-defs.h  compiler.h  hashing.h  input.h  internal-defs.h  invoker-utils.h  kbdysch.h  logging.h  mutator-defs.h  mutator-interface.h  options.h  packet-dumper.h
runtime/include/kbdysch/base/: base-defs.h  diagnostics.h  hashing.h  options.h
runtime/include/kbdysch/extdeps/: pcap.h  pth.h
runtime/include/kbdysch/userspace/: btrfs.h  dm.h  files.h  ioctl-wrapper.h
runtime/mutators/: CMakeLists.txt  afl-fsfuzz-mutator.c  afl-generic-mutator.c  afl-generic-mutator.cpp  afl-interface-decls.h  helpers.cpp  helpers.h  journal.cpp  journal.h  mutations.cpp  mutations.h  mutator-injector.c  variables.cpp  variables.h
runtime/mutators/tests/: proposed-changes.in  proposed-changes.out  resource-renumber.in  resource-renumber.out  resources.in  resources.out  sections.in  sections.out  success-rate.in  success-rate.out  variables.in  variables.out
runtime/userspace/: CMakeLists.txt  btrfs.cpp  dm.cpp  dummy-impls.cpp  files.cpp  ioctl-wrapper.cpp
runtime/utils/: CMakeLists.txt  invoker-debugger.c
standalone/: CMakeLists.txt  bpf-bin-to-elf.sh  bpf.c  fuse-player.c
utils/: collect-coverage.sh  test-map-stability.sh  test-run.sh
utils/cmake/: test-functions.inc  test-map-stability.sh  test-mutator-interface.sh  test-run.sh
