option(USE_INVOKERS     "Build fuzzers that require invokers to be generated first" ON)
option(USE_COMPACT_ENCODING "Read more compact descriptions when generating strings and buffer contents" ON)

include(common/Profile.cmake)
include(common/LKL.cmake)

set(GENERATED_INVOKER_DIR "${CMAKE_CURRENT_LIST_DIR}/generated")
include_directories(include)

if (USE_COMPACT_ENCODING)
    add_definitions(-DUSE_COMPACT_ENCODING)
endif()

add_compile_options(-fPIC)
link_libraries(-Wl,--export-dynamic)
add_subdirectory(base)
add_subdirectory(extdeps)
add_subdirectory(fake_time)
add_subdirectory(dummy-lkl)
add_subdirectory(common)
add_subdirectory(userspace)
add_subdirectory(mutators)

RegisterHarness(testfuzz)
RegisterInvoker(fs)
RegisterHarnessWithInvoker(fsfuzz fs)
TestHarness(fsfuzz ARGS mem=32M ext4 FILES ext4=16M)
RegisterHarnessWithInvoker(fusefuzz fs)
TestHarness(fusefuzz ARGS mem=32M)
RegisterHarness(blockfuzz)
RegisterHarness(bpffuzz)
TestHarness(bpffuzz ARGS mem=32M)
RegisterHarness(hidfuzz)
TestHarness(hidfuzz ARGS mem=32M)
RegisterHarness(partfuzz)
TestHarness(partfuzz ARGS mem=32M)
